--- a/nutri_data_clean.ipynb
+++ b/nutri_data_clean.ipynb
@@ -2,19 +2,507 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "05d98dc4-9e77-47a4-86ab-01af86964da1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#imports\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c01c3441",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bb/hkfpdvbn46vcqvd2x75jvk0h0000gn/T/ipykernel_51654/2712975092.py:39: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  clean_data['food_group'] = clean_data['Food group'].map(mapping)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Engelse naam/Food name</th>\n",
+       "      <th>Hoeveelheid/Quantity</th>\n",
+       "      <th>FAT (g)</th>\n",
+       "      <th>PROT (g)</th>\n",
+       "      <th>ENERCC (kcal)</th>\n",
+       "      <th>THIA (mg)</th>\n",
+       "      <th>RIBF (mg)</th>\n",
+       "      <th>VITB6 (mg)</th>\n",
+       "      <th>VITB12 (µg)</th>\n",
+       "      <th>VITD (µg)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>VITC (mg)</th>\n",
+       "      <th>VITA_RE (µg)</th>\n",
+       "      <th>CA (mg)</th>\n",
+       "      <th>FE (mg)</th>\n",
+       "      <th>MG (mg)</th>\n",
+       "      <th>P (mg)</th>\n",
+       "      <th>K (mg)</th>\n",
+       "      <th>NA (mg)</th>\n",
+       "      <th>ZN (mg)</th>\n",
+       "      <th>food_group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Potatoes raw</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0,12</td>\n",
+       "      <td>0,04</td>\n",
+       "      <td>0,3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0,5</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>450.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0,37</td>\n",
+       "      <td>Bread</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Potatoes new raw</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0,12</td>\n",
+       "      <td>0,04</td>\n",
+       "      <td>0,3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0,5</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>450.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0,2</td>\n",
+       "      <td>Bread</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Potatoes old raw</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0,12</td>\n",
+       "      <td>0,04</td>\n",
+       "      <td>0,22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0,5</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>450.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0,3</td>\n",
+       "      <td>Bread</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pasta white raw</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>1,5</td>\n",
+       "      <td>12,3</td>\n",
+       "      <td>356</td>\n",
+       "      <td>0,1</td>\n",
+       "      <td>0,06</td>\n",
+       "      <td>0,08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1,5</td>\n",
+       "      <td>Bread</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rice white raw</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>352</td>\n",
+       "      <td>0,04</td>\n",
+       "      <td>0,03</td>\n",
+       "      <td>0,12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0,4</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1,8</td>\n",
+       "      <td>Bread</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2318</th>\n",
+       "      <td>Tempeh unprepared</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>4,7</td>\n",
+       "      <td>17,6</td>\n",
+       "      <td>128</td>\n",
+       "      <td>0,03</td>\n",
+       "      <td>0,18</td>\n",
+       "      <td>0,091</td>\n",
+       "      <td>0,02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>1,7</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>1,3</td>\n",
+       "      <td>Substitudes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2319</th>\n",
+       "      <td>Bakery mix for doughnuts Dutch style</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>367</td>\n",
+       "      <td>0,09</td>\n",
+       "      <td>0,09</td>\n",
+       "      <td>0,134</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>680.0</td>\n",
+       "      <td>0,59</td>\n",
+       "      <td>Bread</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2320</th>\n",
+       "      <td>Cheese 35+</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>20,4</td>\n",
+       "      <td>27,3</td>\n",
+       "      <td>302</td>\n",
+       "      <td>0,03</td>\n",
+       "      <td>0,27</td>\n",
+       "      <td>0,058</td>\n",
+       "      <td>1,81</td>\n",
+       "      <td>0,3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>959.0</td>\n",
+       "      <td>0,2</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>606.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>661.0</td>\n",
+       "      <td>3,99</td>\n",
+       "      <td>Dairy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2321</th>\n",
+       "      <td>Flour spelt</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>1,7</td>\n",
+       "      <td>13,2</td>\n",
+       "      <td>348</td>\n",
+       "      <td>0,21</td>\n",
+       "      <td>0,03</td>\n",
+       "      <td>0,088</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1,6</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1,5</td>\n",
+       "      <td>Bread</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2322</th>\n",
+       "      <td>Flour spelt wholemeal</td>\n",
+       "      <td>per 100g</td>\n",
+       "      <td>2,3</td>\n",
+       "      <td>14,4</td>\n",
+       "      <td>332</td>\n",
+       "      <td>0,36</td>\n",
+       "      <td>0,09</td>\n",
+       "      <td>0,24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>3,8</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>395.0</td>\n",
+       "      <td>395.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3,1</td>\n",
+       "      <td>Bread</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2323 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Engelse naam/Food name Hoeveelheid/Quantity FAT (g)  \\\n",
+       "0                             Potatoes raw             per 100g       0   \n",
+       "1                         Potatoes new raw             per 100g       0   \n",
+       "2                         Potatoes old raw             per 100g       0   \n",
+       "3                          Pasta white raw             per 100g     1,5   \n",
+       "4                           Rice white raw             per 100g       1   \n",
+       "...                                    ...                  ...     ...   \n",
+       "2318                     Tempeh unprepared             per 100g     4,7   \n",
+       "2319  Bakery mix for doughnuts Dutch style             per 100g       1   \n",
+       "2320                            Cheese 35+             per 100g    20,4   \n",
+       "2321                           Flour spelt             per 100g     1,7   \n",
+       "2322                 Flour spelt wholemeal             per 100g     2,3   \n",
+       "\n",
+       "     PROT (g)  ENERCC (kcal) THIA (mg) RIBF (mg) VITB6 (mg) VITB12 (µg)  \\\n",
+       "0           2             88      0,12      0,04        0,3           0   \n",
+       "1           2             88      0,12      0,04        0,3           0   \n",
+       "2           2             88      0,12      0,04       0,22           0   \n",
+       "3        12,3            356       0,1      0,06       0,08           0   \n",
+       "4           7            352      0,04      0,03       0,12           0   \n",
+       "...       ...            ...       ...       ...        ...         ...   \n",
+       "2318     17,6            128      0,03      0,18      0,091        0,02   \n",
+       "2319       11            367      0,09      0,09      0,134           0   \n",
+       "2320     27,3            302      0,03      0,27      0,058        1,81   \n",
+       "2321     13,2            348      0,21      0,03      0,088           0   \n",
+       "2322     14,4            332      0,36      0,09       0,24           0   \n",
+       "\n",
+       "     VITD (µg)  ... VITC (mg)  VITA_RE (µg)  CA (mg)  FE (mg) MG (mg)  P (mg)  \\\n",
+       "0            0  ...      14.0           1.0      6.0      0,5    22.0    60.0   \n",
+       "1            0  ...      25.0           0.0      6.0      0,5    14.0    60.0   \n",
+       "2            0  ...       5.0           1.0      6.0      0,5    17.0    60.0   \n",
+       "3            0  ...       0.0           0.0     15.0        2    53.0   125.0   \n",
+       "4            0  ...       0.0           0.0     10.0      0,4    13.0   100.0   \n",
+       "...        ...  ...       ...           ...      ...      ...     ...     ...   \n",
+       "2318         0  ...       0.0           0.0     88.0      1,7    60.0   190.0   \n",
+       "2319         0  ...       0.0           0.0     22.0        1    21.0   110.0   \n",
+       "2320       0,3  ...       1.0         200.0    959.0      0,2    36.0   606.0   \n",
+       "2321         0  ...       NaN           0.0     20.0      1,6    46.0   180.0   \n",
+       "2322         0  ...       NaN           0.0     28.0      3,8   120.0   395.0   \n",
+       "\n",
+       "      K (mg)  NA (mg)  ZN (mg)   food_group  \n",
+       "0      450.0      2.0     0,37        Bread  \n",
+       "1      450.0      2.0      0,2        Bread  \n",
+       "2      450.0      2.0      0,3        Bread  \n",
+       "3      100.0      2.0      1,5        Bread  \n",
+       "4      100.0      2.0      1,8        Bread  \n",
+       "...      ...      ...      ...          ...  \n",
+       "2318   310.0     39.0      1,3  Substitudes  \n",
+       "2319   167.0    680.0     0,59        Bread  \n",
+       "2320    72.0    661.0     3,99        Dairy  \n",
+       "2321   190.0      0.0      1,5        Bread  \n",
+       "2322   395.0      1.0      3,1        Bread  \n",
+       "\n",
+       "[2323 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#load data\n",
+    "data = pd.read_csv('NEVO2023_8.0.csv', delimiter=\"|\")\n",
+    "\n",
+    "#reduce to relevant variables\n",
+    "variables = ['Food group', 'Engelse naam/Food name', 'Hoeveelheid/Quantity', 'FAT (g)', 'PROT (g)', 'ENERCC (kcal)', 'THIA (mg)','RIBF (mg)', 'VITB6 (mg)', 'VITB12 (µg)', 'VITD (µg)', 'VITE (mg)', 'VITC (mg)', 'VITA_RE (µg)', 'CA (mg)', 'FE (mg)' , 'MG (mg)', 'P (mg)', 'K (mg)', 'NA (mg)', 'ZN (mg)']\n",
+    "clean_data = data[variables]\n",
+    "\n",
+    "#group the foods into new groups\n",
+    "mapping = {\n",
+    "    'Potatoes and tubers': 'Bread', ## actually bread, potatoes and grain/cereal but too long to spell\n",
+    "    'Cereals and cereal products': 'Bread',\n",
+    "    'Vegetables': 'Vegetables',\n",
+    "    'Fruits': 'Fruits',\n",
+    "    'Eggs': 'Meat', #and fish and eggs\n",
+    "    'Meat and poultry': 'Meat',\n",
+    "    'Fish, crustacean and shellfish': 'Meat',\n",
+    "    'Legumes': 'Vegetables',\n",
+    "    'Savoury snacks': 'Drop',\n",
+    "    'Herbs and spices': 'Drop',\n",
+    "    'Nuts and seeds': 'Nuts',\n",
+    "    'Bread': 'Bread',\n",
+    "    'Pastry and biscuits': 'Drop',\n",
+    "    'Milk and milk products': 'Dairy',\n",
+    "    'Meat substitutes and dairy substitutes': 'Substitudes',\n",
+    "    'Cheese': 'Dairy',\n",
+    "    'Fats and oils': 'Fats',\n",
+    "    'Cold meat cuts': 'Meat',\n",
+    "    'Mixed dishes': 'Drop',\n",
+    "    'Sugar, sweets and sweet sauces': 'Drop',\n",
+    "    'Alcoholic beverages': 'Drop',\n",
+    "    'Non-alcoholic beverages': 'Drop',\n",
+    "    'Savoury sauces': 'Drop',\n",
+    "    'Miscellaneous foods': 'Drop',\n",
+    "    'Savoury bread spreads': 'Drop',\n",
+    "    'Soups': 'Drop',\n",
+    "    'Foods for special nutritional use': 'Drop'\n",
+    "}\n",
+    "\n",
+    "clean_data['food_group'] = clean_data['Food group'].map(mapping)\n",
+    "\n",
+    "clean_data = clean_data.drop(columns=['Food group'])\n",
+    "\n",
+    "#drop irrelevant foodgroups\n",
+    "df = clean_data.drop(clean_data[clean_data[\"food_group\"] == \"Drop\"].index)\n",
+    "\n",
+    "clean_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1b5479ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#imports\n",
-    "import pandas as pd"
+    "#rename nutri columns \n",
+    "clean_data.rename(columns={\"ENERCC (kcal)\": \"Carbohydrates (kcal)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"THIA (mg)\": \"VITB1 (mg)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"VITA_RE (µg)\": \"VITA (µg)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"CA (mg)\": \"Calcium (mg)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"FE (mg)\": \"Iron (mg)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"MG (mg)\": \"Magnesium (mg)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"P (mg)\": \"Phosphorus (mg)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"K (mg)\": \"Potassium (mg)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"NA (mg)\": \"Sodium (mg)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"ZN (mg)\": \"Zinc (mg)\"}, inplace=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "04591c21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#check for missing values\n",
+    "clean_data.isnull().sum()\n",
+    "\n",
+    "#remove rows with missing values\n",
+    "clean_data = clean_data.dropna()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c01c3441",
+   "id": "d2c372c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -22,7 +510,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
