--- a/nutri_data_clean.ipynb
+++ b/nutri_data_clean.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "05d98dc4-9e77-47a4-86ab-01af86964da1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#imports\n",
     "import pandas as pd\n",
@@ -32,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bb/hkfpdvbn46vcqvd2x75jvk0h0000gn/T/ipykernel_51654/2712975092.py:39: SettingWithCopyWarning: \n",
+      "/var/folders/cr/_q1why214gg5d4kb6_zzn9mr0000gn/T/ipykernel_80711/2712975092.py:39: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -487,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "04591c21",
    "metadata": {},
    "outputs": [],
@@ -501,16 +492,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d2c372c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clean_data.to_csv('clean_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "cssci",
    "language": "python",
    "name": "python3"
   },
@@ -524,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
