--- a/predefined_lists.ipynb
+++ b/predefined_lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 195,
    "id": "6d17a34b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 196,
    "id": "3f50aaa3",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "[2007 rows x 23 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 197,
    "id": "76cb1477",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 198,
    "id": "780add30",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "id": "69150e99",
    "metadata": {},
    "outputs": [
@@ -484,17 +484,29 @@
      "output_type": "stream",
      "text": [
       "Top 10 Protein-rich foods:\n",
-      "             Engelse naam/Food name food_pyramid_group  PROT (g)\n",
-      "73               Egg powder chicken            Protein      46.0\n",
-      "446                 Cheese Parmesan              Dairy      40.0\n",
-      "525             Flour soya full fat       Whole Grains      38.0\n",
-      "1441     Pork stewing meat prepared            Protein      37.4\n",
-      "791      Pork gammon steak prepared            Protein      37.1\n",
-      "793     Pork shoulder chop prepared            Protein      37.1\n",
-      "1434  Beef breast boneless prepared            Protein      36.8\n",
-      "546           Cheese 20+ low sodium              Dairy      36.7\n",
-      "507                Beans soya dried            Protein      35.9\n",
-      "238              Milk skimmed dried              Dairy      35.4\n"
+      "             Engelse naam/Food name food_pyramid_group  \\\n",
+      "73               Egg powder chicken            Protein   \n",
+      "446                 Cheese Parmesan              Dairy   \n",
+      "525             Flour soya full fat       Whole Grains   \n",
+      "1441     Pork stewing meat prepared            Protein   \n",
+      "791      Pork gammon steak prepared            Protein   \n",
+      "793     Pork shoulder chop prepared            Protein   \n",
+      "1434  Beef breast boneless prepared            Protein   \n",
+      "546           Cheese 20+ low sodium              Dairy   \n",
+      "507                Beans soya dried            Protein   \n",
+      "238              Milk skimmed dried              Dairy   \n",
+      "\n",
+      "                       Food group  PROT (g)  \n",
+      "73                           Eggs      46.0  \n",
+      "446                        Cheese      40.0  \n",
+      "525   Cereals and cereal products      38.0  \n",
+      "1441             Meat and poultry      37.4  \n",
+      "791              Meat and poultry      37.1  \n",
+      "793              Meat and poultry      37.1  \n",
+      "1434             Meat and poultry      36.8  \n",
+      "546                        Cheese      36.7  \n",
+      "507                       Legumes      35.9  \n",
+      "238        Milk and milk products      35.4  \n"
      ]
     }
    ],
@@ -509,7 +521,7 @@
     "    \n",
     "    # Sort descending by the nutrient and take top 10\n",
     "    top10 = (\n",
-    "        filtered_data[['Engelse naam/Food name', 'food_pyramid_group', nutrient]]\n",
+    "        filtered_data[['Engelse naam/Food name', 'food_pyramid_group', 'Food group', nutrient]]\n",
     "        .sort_values(by=nutrient, ascending=False)\n",
     "        .head(10)\n",
     "    )\n",
@@ -519,6 +531,21 @@
     "# Example: print top 10 protein-rich foods (excluding processed)\n",
     "print(\"Top 10 Protein-rich foods:\")\n",
     "print(top10_per_nutrient['PROT (g)'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "a18a1ebb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for nutrient, df in top10_per_nutrient.items():\n",
+    "    safe_name = nutrient.replace(\" \", \"_\").replace(\"(\", \"\").replace(\")\", \"\").replace(\"/\", \"_\")\n",
+    "    filename = f\"top10_nutrients/top10_{safe_name}.json\"\n",
+    "\n",
+    "    \n",
+    "    df.to_json(filename, orient=\"records\", force_ascii=False, indent=2)"
    ]
   },
   {
@@ -539,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 201,
    "id": "4a476f3f",
    "metadata": {},
    "outputs": [
@@ -757,7 +784,7 @@
        "[3662 rows x 8 columns]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 202,
    "id": "817db8e4",
    "metadata": {},
    "outputs": [],
@@ -808,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 203,
    "id": "80ae3a09",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1261,7 @@
        "[3657 rows x 30 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 204,
    "id": "ab02bb85",
    "metadata": {},
    "outputs": [],
@@ -1268,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 205,
    "id": "d3dbf40b",
    "metadata": {},
    "outputs": [
@@ -1495,7 +1522,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 206,
    "id": "0ccbc906",
    "metadata": {},
    "outputs": [],
@@ -1527,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 207,
    "id": "cc412010",
    "metadata": {},
    "outputs": [
@@ -1677,7 +1704,7 @@
        "      <td>Almond paste w egg</td>\n",
        "      <td>[Juice lemon fresh, Sugar granulated, Almonds ...</td>\n",
        "      <td>[Miscellaneous foods, Miscellaneous foods, Mis...</td>\n",
-       "      <td>[Irrelevant, Irrelevant, Irrelevant, Irrelevant]</td>\n",
+       "      <td>[Other, Other, Other, Other]</td>\n",
        "      <td>[1.525, 10.091, 10.091, 2.517]</td>\n",
        "      <td>[0.649, 4.295, 4.295, 1.071]</td>\n",
        "      <td>[28.098, 185.982, 185.982, 46.384]</td>\n",
@@ -1890,7 +1917,7 @@
        "1    [Processed / Not Everyday, Processed / Not Eve...   \n",
        "2    [Processed / Not Everyday, Processed / Not Eve...   \n",
        "3    [Processed / Not Everyday, Processed / Not Eve...   \n",
-       "4     [Irrelevant, Irrelevant, Irrelevant, Irrelevant]   \n",
+       "4                         [Other, Other, Other, Other]   \n",
        "..                                                 ...   \n",
        "683                                     [Dairy, Dairy]   \n",
        "684                                     [Dairy, Dairy]   \n",
@@ -2005,7 +2032,7 @@
        "[688 rows x 22 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2018,144 +2045,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "e6b9351a",
+   "execution_count": 208,
+   "id": "90f2243a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Food name</th>\n",
-       "      <th>Ingr_Food</th>\n",
-       "      <th>Food group</th>\n",
-       "      <th>food_pyramid_group</th>\n",
-       "      <th>FAT (g)_actual</th>\n",
-       "      <th>PROT (g)_actual</th>\n",
-       "      <th>Carbohydrates (kcal)_actual</th>\n",
-       "      <th>VITB1 (mg)_actual</th>\n",
-       "      <th>RIBF (mg)_actual</th>\n",
-       "      <th>VITB6 (mg)_actual</th>\n",
-       "      <th>...</th>\n",
-       "      <th>VITE (mg)_actual</th>\n",
-       "      <th>VITC (mg)_actual</th>\n",
-       "      <th>VITA (µg)_actual</th>\n",
-       "      <th>Calcium (mg)_actual</th>\n",
-       "      <th>Iron (mg)_actual</th>\n",
-       "      <th>Magnesium (mg)_actual</th>\n",
-       "      <th>Phosphorus (mg)_actual</th>\n",
-       "      <th>Potassium (mg)_actual</th>\n",
-       "      <th>Sodium (mg)_actual</th>\n",
-       "      <th>Zinc (mg)_actual</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>685</th>\n",
-       "      <td>Yoghurt low fat w fruit</td>\n",
-       "      <td>[Sugar granulated, Yoghurt low fat, Fruit in o...</td>\n",
-       "      <td>[Milk and milk products, Milk and milk product...</td>\n",
-       "      <td>[Dairy, Dairy, Dairy]</td>\n",
-       "      <td>[0.018, 0.17, 0.012]</td>\n",
-       "      <td>[0.27, 2.55, 0.18]</td>\n",
-       "      <td>[6.03, 56.95, 4.02]</td>\n",
-       "      <td>[0.001, 0.008, 0.001]</td>\n",
-       "      <td>[0.014, 0.128, 0.009]</td>\n",
-       "      <td>[0.002, 0.022, 0.002]</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[0.009, 0.085, 0.006]</td>\n",
-       "      <td>[0.0, 0.0, 0.0]</td>\n",
-       "      <td>[0.18, 1.7, 0.12]</td>\n",
-       "      <td>[10.17, 96.05, 6.78]</td>\n",
-       "      <td>[0.0, 0.0, 0.0]</td>\n",
-       "      <td>[0.99, 9.35, 0.66]</td>\n",
-       "      <td>[7.38, 69.7, 4.92]</td>\n",
-       "      <td>[13.14, 124.1, 8.76]</td>\n",
-       "      <td>[3.15, 29.75, 2.1]</td>\n",
-       "      <td>[0.035, 0.332, 0.023]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Food name  \\\n",
-       "685  Yoghurt low fat w fruit   \n",
-       "\n",
-       "                                             Ingr_Food  \\\n",
-       "685  [Sugar granulated, Yoghurt low fat, Fruit in o...   \n",
-       "\n",
-       "                                            Food group     food_pyramid_group  \\\n",
-       "685  [Milk and milk products, Milk and milk product...  [Dairy, Dairy, Dairy]   \n",
-       "\n",
-       "           FAT (g)_actual     PROT (g)_actual Carbohydrates (kcal)_actual  \\\n",
-       "685  [0.018, 0.17, 0.012]  [0.27, 2.55, 0.18]         [6.03, 56.95, 4.02]   \n",
-       "\n",
-       "         VITB1 (mg)_actual       RIBF (mg)_actual      VITB6 (mg)_actual  ...  \\\n",
-       "685  [0.001, 0.008, 0.001]  [0.014, 0.128, 0.009]  [0.002, 0.022, 0.002]  ...   \n",
-       "\n",
-       "          VITE (mg)_actual VITC (mg)_actual   VITA (µg)_actual  \\\n",
-       "685  [0.009, 0.085, 0.006]  [0.0, 0.0, 0.0]  [0.18, 1.7, 0.12]   \n",
-       "\n",
-       "      Calcium (mg)_actual Iron (mg)_actual Magnesium (mg)_actual  \\\n",
-       "685  [10.17, 96.05, 6.78]  [0.0, 0.0, 0.0]    [0.99, 9.35, 0.66]   \n",
-       "\n",
-       "    Phosphorus (mg)_actual Potassium (mg)_actual  Sodium (mg)_actual  \\\n",
-       "685     [7.38, 69.7, 4.92]  [13.14, 124.1, 8.76]  [3.15, 29.75, 2.1]   \n",
-       "\n",
-       "          Zinc (mg)_actual  \n",
-       "685  [0.035, 0.332, 0.023]  \n",
-       "\n",
-       "[1 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "recipe_final_df[recipe_final_df['Food name'] == 'Yoghurt low fat w fruit']"
+    "recipe_final_df.to_json(\"recipe_final_df.json\", orient=\"records\", force_ascii=False, indent=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b25f3275",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaa73b40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa157639",
+   "id": "a6c42120",
    "metadata": {},
    "outputs": [],
    "source": []
