clusters are different diet types

--- a/nutri_data_clean.ipynb
+++ b/nutri_data_clean.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "15052993",
    "metadata": {},
    "outputs": [
@@ -436,20 +436,20 @@
     "clean_data = data[variables]\n",
     "\n",
     "wheel_mapping = {\n",
-    "    # 🟦 Drinks\n",
+    "    # Drinks\n",
     "    'Non-alcoholic beverages': 'Drinks',\n",
     "    'Alcoholic beverages': 'Other',  # outside the Wheel of Five\n",
     "\n",
-    "    # 🟩 Vegetables and fruit\n",
+    "    # Vegetables and fruit\n",
     "    'Vegetables': 'Vegetables and fruit',\n",
     "    'Fruits': 'Vegetables and fruit',\n",
     "\n",
-    "    # 🟧 Bread, Grain/Cereal Products and Potatoes\n",
+    "    # Bread, Grain/Cereal Products and Potatoes\n",
     "    'Cereals and cereal products': 'Bread, grain/cereal products and potatoes',\n",
     "    'Bread': 'Bread, grain/cereal products and potatoes',\n",
     "    'Potatoes and tubers': 'Bread, grain/cereal products and potatoes',\n",
     "\n",
-    "    # 🩷 Dairy, Nuts, Fish, Legumes, Meat and Eggs\n",
+    "    # Dairy, Nuts, Fish, Legumes, Meat and Eggs\n",
     "    'Milk and milk products': 'Dairy, nuts, fish, legumes, meat and eggs',\n",
     "    'Cheese': 'Dairy, nuts, fish, legumes, meat and eggs',\n",
     "    'Meat and poultry': 'Dairy, nuts, fish, legumes, meat and eggs',  # lean, unprocessed types only\n",
@@ -459,11 +459,11 @@
     "    'Nuts and seeds': 'Dairy, nuts, fish, legumes, meat and eggs',\n",
     "    'Meat substitutes and dairy substitutes': 'Dairy, nuts, fish, legumes, meat and eggs',\n",
     "\n",
-    "    # 🟨 Spreading and Cooking Fats\n",
+    "    # Spreading and Cooking Fats\n",
     "    'Fats and oils': 'Spreading and cooking fats',\n",
     "    'Savoury bread spreads': 'Spreading and cooking fats',\n",
     "\n",
-    "    # ⚫ Outside the Wheel (too processed, high sugar/salt/fat)\n",
+    "    # Outside the Wheel (too processed, high sugar/salt/fat)\n",
     "    'Pastry and biscuits': 'Other',\n",
     "    'Savoury snacks': 'Other',\n",
     "    'Sugar, sweets and sweet sauces': 'Other',\n",
