different diet types clustered

--- a/diet_type_cluster.ipynb
+++ b/diet_type_cluster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "b16566bb",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "84d1ef2e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "777b9580",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "39f04f29",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "31f6a5fd",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "172ebed3",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "4d4c5984",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "7ab67ce2",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "ab74b2a2",
    "metadata": {},
    "outputs": [
@@ -237,15 +237,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "a2aa1223",
    "metadata": {},
    "outputs": [],
    "source": [
     "cluster_labels = {\n",
     "    0: \"Balanced Omnivore\",\n",
-    "    1: \"Ketogenic\",\n",
-    "    2: \"High Protein\",\n",
+    "    1: \"Strict Ketogenic\",\n",
+    "    2: \"Protein Focused\",\n",
     "    3: \"Whole Food Plant Based\"\n",
     "}\n",
     "df_clean['diet_label'] = df_clean['diet_cluster'].map(cluster_labels)"
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "c57cdc31",
    "metadata": {},
    "outputs": [
@@ -264,50 +264,50 @@
       "                        FAT (g)  PROT (g)  Carbohydrates (kcal)  VITB1 (mg)  \\\n",
       "diet_label                                                                    \n",
       "Balanced Omnivore         14.13     18.65                269.34        0.31   \n",
-      "High Protein              21.60     22.18                311.15        0.05   \n",
-      "Ketogenic                 79.04      0.19                713.49        0.04   \n",
+      "Protein Focused           21.60     22.18                311.15        0.05   \n",
+      "Strict Ketogenic          79.04      0.19                713.49        0.04   \n",
       "Whole Food Plant Based     3.81      3.69                122.10        0.06   \n",
       "\n",
       "                        RIBF (mg)  VITB6 (mg)  VITB12 (µg)  VITD (µg)  \\\n",
       "diet_label                                                              \n",
       "Balanced Omnivore            0.29        0.36         3.10       1.27   \n",
-      "High Protein                 0.33        0.08         1.73       0.24   \n",
-      "Ketogenic                    0.03        0.03         0.08       3.74   \n",
+      "Protein Focused              0.33        0.08         1.73       0.24   \n",
+      "Strict Ketogenic             0.03        0.03         0.08       3.74   \n",
       "Whole Food Plant Based       0.08        0.08         0.12       0.10   \n",
       "\n",
       "                        VITE (mg)  VITC (mg)  ...  Magnesium (mg)  \\\n",
       "diet_label                                    ...                   \n",
       "Balanced Omnivore            2.51       2.11  ...           65.15   \n",
-      "High Protein                 0.88       0.75  ...           32.85   \n",
-      "Ketogenic                   18.70       0.00  ...            1.20   \n",
+      "Protein Focused              0.88       0.75  ...           32.85   \n",
+      "Strict Ketogenic            18.70       0.00  ...            1.20   \n",
       "Whole Food Plant Based       0.81       9.47  ...           18.16   \n",
       "\n",
       "                        Phosphorus (mg)  Potassium (mg)  Sodium (mg)  \\\n",
       "diet_label                                                             \n",
       "Balanced Omnivore                263.24          433.77       238.35   \n",
-      "High Protein                     546.34          213.64       835.46   \n",
-      "Ketogenic                         14.02           23.24        99.94   \n",
+      "Protein Focused                  546.34          213.64       835.46   \n",
+      "Strict Ketogenic                  14.02           23.24        99.94   \n",
       "Whole Food Plant Based            66.55          192.36       123.71   \n",
       "\n",
       "                        Zinc (mg)  Protein_per_kcal  Fat_to_Protein  \\\n",
       "diet_label                                                            \n",
       "Balanced Omnivore            2.83              0.09            1.69   \n",
-      "High Protein                 3.05              0.07            0.97   \n",
-      "Ketogenic                    0.06              0.00           69.40   \n",
+      "Protein Focused              3.05              0.07            0.97   \n",
+      "Strict Ketogenic             0.06              0.00           69.40   \n",
       "Whole Food Plant Based       0.43              0.04            0.86   \n",
       "\n",
       "                        Carb_to_Protein  Sodium_to_Potassium  \\\n",
       "diet_label                                                     \n",
       "Balanced Omnivore                 24.81                 0.84   \n",
-      "High Protein                      20.05                13.90   \n",
-      "Ketogenic                        626.12                11.88   \n",
+      "Protein Focused                   20.05                13.90   \n",
+      "Strict Ketogenic                 626.12                11.88   \n",
       "Whole Food Plant Based            30.62                 1.64   \n",
       "\n",
       "                        Micronutrient_Density  \n",
       "diet_label                                     \n",
       "Balanced Omnivore                        6.58  \n",
-      "High Protein                             5.87  \n",
-      "Ketogenic                                1.05  \n",
+      "Protein Focused                          5.87  \n",
+      "Strict Ketogenic                         1.05  \n",
       "Whole Food Plant Based                   8.08  \n",
       "\n",
       "[4 rows x 23 columns]\n"
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "id": "5c565e78",
    "metadata": {},
    "outputs": [
@@ -331,22 +331,22 @@
       "food_wheel_group        Bread, grain/cereal products and potatoes  \\\n",
       "diet_label                                                          \n",
       "Balanced Omnivore                                            87.0   \n",
-      "High Protein                                                  2.0   \n",
-      "Ketogenic                                                     0.0   \n",
+      "Protein Focused                                               2.0   \n",
+      "Strict Ketogenic                                              0.0   \n",
       "Whole Food Plant Based                                      177.0   \n",
       "\n",
       "food_wheel_group        Dairy, nuts, fish, legumes, meat and eggs  Drinks  \\\n",
       "diet_label                                                                  \n",
       "Balanced Omnivore                                           313.0     2.0   \n",
-      "High Protein                                                 57.0     1.0   \n",
-      "Ketogenic                                                     0.0     0.0   \n",
+      "Protein Focused                                              57.0     1.0   \n",
+      "Strict Ketogenic                                              0.0     0.0   \n",
       "Whole Food Plant Based                                      212.0    92.0   \n",
       "\n",
       "food_wheel_group        Spreading and cooking fats  Vegetables and fruit  \n",
       "diet_label                                                                \n",
       "Balanced Omnivore                             18.0                   6.0  \n",
-      "High Protein                                   0.0                   1.0  \n",
-      "Ketogenic                                     51.0                   0.0  \n",
+      "Protein Focused                                0.0                   1.0  \n",
+      "Strict Ketogenic                              51.0                   0.0  \n",
       "Whole Food Plant Based                        21.0                 295.0  \n"
      ]
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "f4561628",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "id": "c8ef216f",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "      <td>2</td>\n",
        "      <td>2.722173</td>\n",
        "      <td>0.237242</td>\n",
-       "      <td>High Protein</td>\n",
+       "      <td>Protein Focused</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -790,12 +790,12 @@
        "2003       Balanced Omnivore  \n",
        "2004       Balanced Omnivore  \n",
        "2005  Whole Food Plant Based  \n",
-       "2006            High Protein  \n",
+       "2006         Protein Focused  \n",
        "\n",
        "[1335 rows x 32 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
