--- a/kmean and DBSCAN.ipynb
+++ b/kmean and DBSCAN.ipynb
@@ -669,7 +669,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cssci",
    "language": "python",
    "name": "python3"
   },
@@ -683,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
