--- a/cluster_and_tagging.ipynb
+++ b/cluster_and_tagging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "id": "b16566bb",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "id": "84d1ef2e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "id": "777b9580",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "id": "39f04f29",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "id": "31f6a5fd",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "172ebed3",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "id": "4d4c5984",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "id": "7ab67ce2",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "ab74b2a2",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "705dc61a",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "id": "5b58a15c",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "id": "f4561628",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "id": "c8ef216f",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
        "[1335 rows x 31 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "310c0c91",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "id": "b8b2e725",
    "metadata": {},
    "outputs": [],
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "id": "9a3b8b2c",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,17 +861,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "id": "4d2e1769",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.to_csv(\"final_dataset.csv\", index=False)"
+    "#df_clean.to_csv(\"final_dataset.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "id": "c611e6ad",
    "metadata": {},
    "outputs": [],
@@ -886,17 +886,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "id": "1c802d9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean_demo.to_csv(\"final_dataset_demo.csv\", index=False)"
+    "#df_clean_demo.to_csv(\"final_dataset_demo.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "id": "158935aa",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1200,7 @@
        "[1335 rows x 13 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "id": "631939b7",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1224,7 @@
        "       'Spreading and cooking fats', 'Drinks'], dtype=object)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 23,
    "id": "d8789e26",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1247,7 @@
        "       'Spreading and cooking fats', 'Drinks'], dtype=object)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "id": "a6cc8126",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1271,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
